# pdftimetable-parser

./: main.py  pyproject.toml  readme.md
